--- a/scss/utilidades/_formulario.scss
+++ b/scss/utilidades/_formulario.scss
@@ -14,10 +14,11 @@
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-style: normal;
-    font-size: 15px;
+    font-size: 1.4rem;
     color: white;
     box-shadow: 7px 13px 37px #000;
     margin-bottom: 40px;
+    /* el cuadro para el nombre */
     .textboxnombre {
         width: 90%;
         background-color:whitesmoke;
@@ -71,7 +72,7 @@
 
 
 
-/* el cuadro para el nombre */
+
 
 
 
