--- a/scss/utilidades/_productos.scss
+++ b/scss/utilidades/_productos.scss
@@ -7,6 +7,7 @@
     .tituloCategoria{
         text-align: center;
         padding: 5px;
+        margin-top: 0.7rem;
         margin-left: 0.7rem;
         margin-right: 0.7rem;
         font-family: "Roboto", sans-serif;
@@ -14,6 +15,7 @@
         font-style: normal;
         font-size: 2rem;
         color: #373333;
+        text-transform: uppercase;
     }
     /* Esta parte modifica el subtítulo de cada categoría */
     .descripcionCategoria {
@@ -30,141 +32,268 @@
             font-weight: 800;
         }
     }
-    /* aquí va el recuadro de cada producto con flex para centrar y una altura automatica para que crezca según el contenido de cada producto*/
-    .recuadroProducto {
-        display: flex;
-        flex-direction: column;
-        margin: 1rem;
-        height: auto;
-        width: 21.5rem;
-        border: 2px solid #949494 ;
-        .tituloProducto {
+    .displayArea {
+        /* aquí va el recuadro de cada producto con flex para centrar y una altura automatica para que crezca según el contenido de cada producto*/
+        .recuadroProducto {
+            padding: 0.4rem;
+            margin: 1rem;
             height: auto;
-            margin: 0.7rem;
-            background-color: #E51B23;
-            font-family: "Roboto", sans-serif;
-            font-weight: 700;
-            font-style: normal;
-            font-size: 1.5rem;
-            color: #ffffff;
-            text-align: center;
-        }
-        /* hago una class grid en un nuevo div que será útil en los MQ de tablet y desktop */
-        .grid{
-            /* la aplico flex a las imagenes para que se centren en el recuadro cuando sobrepasen el div */
-            .imagenProducto {
-                display:flex;
-                justify-content: center;
-                align-items: center;
-                margin: 0.7rem;
-                height: 15rem;
-                background-color: #bd9899;
-                overflow: hidden;
-                object-fit: cover;
-                box-shadow: 3px 7px 17px #000;
-                /* le doy la misma altura del div a la imagen */
-                img {
-                    height: 15rem;
-                }
-            }
-            .descripcionProducto {
+            width: 21.5rem;
+            border: 2px solid #949494 ;
+            .tituloProducto {
+                text-transform: uppercase;
                 height: auto;
                 margin: 0.7rem;
-                margin-bottom: 0;
+                background-color: #E51B23;
                 font-family: "Roboto", sans-serif;
-                font-weight: 500;
+                font-weight: 700;
                 font-style: normal;
-                font-size: 1rem;
-                color: #373333;
-                list-style: none;
-                /* quitamos los puntitos del listado */
-                ul {
-                    list-style: none;
-                }
+                font-size: 1.5rem;
+                color: #ffffff;
+                text-align: center;
             }
-            .precioProducto {
-                height: 90px;
-                margin: 0.7rem;
-                margin-bottom: 0;
-                font-family: "Roboto", sans-serif;
-                font-weight: 500;
-                font-style: normal;
-                font-size: 1rem;
-                color: #373333;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-end;
-                span {
-                    font-weight: 900;
+            /* hago una class grid en un nuevo div que será útil en los MQ de tablet y desktop */
+            .grid{
+                /* la aplico flex a las imagenes para que se centren en el recuadro cuando sobrepasen el div */
+                .imagenProducto {
+                    margin: 0.7rem;
+                    margin-bottom: 1.5rem;
+                    background-color: $colorSecundario;
+                    box-shadow: 3px 7px 17px #000;
                 }
-                .botonProducto {
-                    .boton1 {
-                        background-color: $colorSecundario;
+                .descripcionProducto {
+                    height: auto;
+                    margin: 0.7rem;
+                    margin-bottom: 0;
+                    font-family: "Roboto", sans-serif;
+                    font-weight: 500;
+                    font-style: normal;
+                    font-size: 1rem;
+                    color: #373333;
+                    list-style: none;
+                    /* quitamos los puntitos del listado */
+                    ul {
+                        list-style: none;
+                    }
+                }
+                .precioProducto {
+                    height: 90px;
+                    margin: 0.7rem;
+                    margin-bottom: 1rem;
+                    font-family: "Roboto", sans-serif;
+                    font-weight: 500;
+                    font-style: normal;
+                    font-size: 1rem;
+                    color: #373333;
+                    display: flex;
+                    flex-direction: column;
+                    /* muevo el precio y el botón al final del div */
+                    align-items: flex-end;
+                    justify-content: flex-end;
+                    span {
+                        font-weight: 900;
+                    }
+                    .botonProducto {
+                        .boton1 {
+                            background-color: $colorSecundario;
+                        }
                     }
                 }
             }
         }
-        
     }
-}
-
-
-.boxPreguntas {
-    margin: 0.7rem;
-    /* estilo de las preguntas que van en negrita */
-    .preguntas {
-        font-family: "Roboto", sans-serif;
-        font-weight: 900;
-        font-style: normal;
-        font-size: 1rem;
-        color: #373333;
+    .boxPreguntas {
+        margin: 0.7rem;
+        /* estilo de las preguntas que van en negrita */
+        .preguntas {
+            font-family: "Roboto", sans-serif;
+            font-weight: 900;
+            font-style: normal;
+            font-size: 1rem;
+            color: #373333;
+        }
+        /* respuesta que van sin negrita */
+        .respuestas {
+            font-family: "Roboto", sans-serif;
+            font-weight: 500;
+            font-style: normal;
+            font-size: 0.8rem;
+            color: #373333;
+            margin-bottom: 1rem;
+            margin-top: -1rem;
+        }
     }
-    /* respuesta que van sin negrita */
-    .respuestas {
-        font-family: "Roboto", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-        font-size: 0.8rem;
-        color: #373333;
-        margin-bottom: 5px;
-    }
-}
-
-/* acá el MQ para tablet*/
-@media screen and (min-width: 768px) {
-    .mainProductos {
-        .recuadroProducto {
-            width: 40rem;
-            /* le aplico un grid para crear dos columnas, la descrpcion queda en la primera y la imagen con el precio en la segudna columna */
-            .grid {
-                display: grid;
-                grid-template-columns: 55% 45%;
-                .imagenProducto {
-                    grid-column: 2/3;
-                    border-radius: 0.5rem;
+    /* aquí le doy formato a una tabla de despachos*/
+    .tablaDespacho {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 1.5rem;
+        margin-bottom: 1rem;
+            .tablaValores {
+                padding: 4px;
+                border: 3px solid $colorSecundario;
+                border-collapse: collapse;
+                width: 300px;
+                tr {
+                padding: 5px;
+                border: 3px solid $colorSecundario;
+                @include textoTitulosTabla;
+                    /* títulos de la tabla de costos de envío */
+                    th {
+                        padding: 5px;
+                        border: 3px solid $colorSecundario;
+                        @include textoTitulosTabla;
+                    }
+                    td {
+                        padding: 5px;
+                        border: 3px solid $colorSecundario;
+                        @include textoTabla;
+                    }
                 }
-                .descripcionProducto {
-                    grid-column: 1/2;
-                    grid-row: 1/2;
+                /* selecciono los precios y los alineo a la derecha */
+                .columnaCosto {
+                    text-align: right;
                 }
-                .precioProducto {
-                    grid-column: 2/3;
-                }
+            }
+        /* busco desde la clase el parrafo para dar formato al texto para san antonio la entrega y retiro es gratis*/
+        p {
+            margin-top: 20px;
+            @include textoSecundario;
+            /* busco el span del parrafo para poner bold */
+            span {
+                font-weight: 900;
+                color: $colorPrincipal;
             }
         }
     }
 }
 
-/* MQ para desktop */
-@media screen and (min-width: 1024px) {
+
+
+
+/* acá el MQ para tablet*/
+/* le bajo un pixel al MQ para mejorar la visualización en dispositivos que están en el límite*/
+@media screen and (min-width: 767px) {
     .mainProductos {
-        /* le doy mas ancho al recuadro de cada producto */
-        .recuadroProducto {
-            width: 50rem;
-            padding: 1rem;
-            .grid {
-                .imagenProducto {
-                    border-radius: 0.7rem;
+        /* Esta parte modifica el la descripción de cada categoría */
+        .descripcionCategoria {
+            font-size: 1.2rem;
+            max-width: 44rem;
+        }
+        .displayArea{
+            .recuadroProducto {
+                width: 44rem;
+                padding: 1rem;
+                .tituloProducto {
+                    font-size: 1.7rem;
+                }
+                /* le aplico un grid para crear dos columnas, la descrpcion queda en la primera y la imagen con el precio en la segudna columna */
+                .grid {
+                    display: grid;
+                    grid-template-columns: 45% 55%;
+                    .imagenProducto {
+                        grid-column: 2/3;
+                        border-radius: 0.5rem;
+                        overflow: hidden;
+                        height: 15rem;
+                        .carousel {
+                            height: 15rem;
+                            img {
+                                max-width: 100%;
+                                height: 15rem;
+                            }
+                        }
+                    }
+                    .descripcionProducto {
+                        grid-column: 1/2;
+                        grid-row: 1/3;
+                        font-size: 1.1rem;
+                    }
+                    .precioProducto {
+                        grid-column: 2/3;
+                        grid-row:2/3;
+                        font-size: 1.3rem;
+                        margin-bottom: 0rem;
+                        .botonProducto {
+                            .boton1 {
+                                font-size: 1.2rem;
+                            }
+                        }
+                    }
+                }
+            }
+        }  
+        .boxPreguntas {
+            margin: 0.7rem;
+            /* estilo de las preguntas que van en negrita */
+            .preguntas {
+                font-size: 1.4rem;
+            }
+            /* respuesta que van sin negrita */
+            .respuestas {
+                font-size: 1.2rem;
+                margin-bottom: 1.2rem;
+                margin-top: -1rem;
+            }
+        }      
+    }
+}
+
+/* MQ para desktop */
+/* le aumento a 1400 pixeles para entonces crear dos columnas y mejorar la visualización*/
+@media screen and (min-width: 1400px) {
+    .mainProductos {
+        /* Esta parte modifica el la descripción de cada categoría */
+        .descripcionCategoria {
+            font-size: 1.2rem;
+            max-width: 60rem;
+        }
+        .displayArea {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            /* le doy menos ancho al recuadro de cada producto para que quepan en dos columnas */
+            .recuadroProducto {
+                max-width: 37rem;
+                padding: 1rem;
+                .grid {
+                    .imagenProducto {
+                        .carousel {
+                            border-radius: 0.7rem;
+                            img {
+                                object-fit: cover;
+                            }
+                        }
+                    }
+                    .descripcionProducto {
+                        font-size: 1.1rem;
+                    }
+                }
+            }
+        }
+        /* aquí le doy formato a una tabla de despachos*/
+        .tablaDespacho {
+                .tablaValores {
+                    width: 25rem;
+                    tr {
+                    font-size: 1.5rem;
+                        /* títulos de la tabla de costos de envío */
+                        th {
+                            font-size: 1.3rem;
+                        }
+                        td {
+                            font-size: 1.3rem;
+                            }
+                    }
+                }
+            /* busco desde la clase el parrafo para dar formato al texto para san antonio la entrega y retiro es gratis*/
+            p {
+                font-size: 1.7rem;
+                /* busco el span del parrafo para poner bold */
+                span {
+                    font-weight: 900;
+                    color: $colorPrincipal;
                 }
             }
         }
